@@ -4574,8 +4574,9 @@ Example:
 </screen>
 This defines the PC speaker output mode. In the 'sound' mode the beep
 is generated by the square wave generator which is a part of the
-lowlevel sound support. The 'system' mode is only available on Linux
-and Windows. On Linux /dev/console is used for output and on Windows
+lowlevel sound support. In this mode the 'volume' parameter can be used
+to set the output volume (0 - 15). The 'system' mode is only available on
+Linux and Windows. On Linux /dev/console is used for output and on Windows
 the Beep() function. The 'gui' mode forwards the beep to the related
 gui methods (currently only used by the Carbon gui).
 </para>
